2014-08-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update dictionary from texhyphen SVN.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	* data/tdict-std-compound.txt:
	* data/tdict-std.txt:
	  - Update dictionary from dehyphenated source for texhyphen
	    hyphenation patterns.

2014-08-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac: Post-release version suffix added.

2013-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac, NEWS:
	=== Version 0.5.2 ===

2013-12-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* AUTHORS: Set me as Current maintainer.

2013-12-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix off-by-one character loss in long HTML token.

	* src/filterhtml.cpp (FilterHtml::GetNextToken):
	  - On verge of full buffer, jump to 'chbuff' storing stage,
	    rather than just quitting the loop, so the first character
	    of the next part of the long token is not lost.
	  - Also decrement 'tokenSz' on first character. Missing this
	    could cause buffer overflow.

	Thanks Nicolas Brouard for the report.

2013-12-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix another infinite loop on EOF after punct or Thai chunk.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Update buffer after comsumeToken(), so next reads won't get the
	    same contents again.

2013-12-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust source.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Unindent else-block after the dead if-block.

2013-12-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix infinite loop on verbatim input.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Update buffer after comsumeToken(), so next reads won't get the
	    same contents again.
